<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FragmentDialogItem">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:text="@string/select_language"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/java"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/java"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/kotlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kotlin"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/swift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swift"
            android:textSize="16sp" />

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/submit"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/cancel3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:id="@+id/liner"-->
    <!--        android:layout_width="300dp"-->
    <!--        android:layout_height="400dp"-->
    <!--        android:background="@drawable/fragment_dialog_style"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--        <TextView-->
    <!--            android:id="@+id/txtV"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="50dp"-->
    <!--            android:text="@string/log_in"-->
    <!--            android:textSize="24sp"-->
    <!--            app:layout_constraintBottom_toTopOf="@id/user_name"-->
    <!--            app:layout_constraintLeft_toLeftOf="parent"-->
    <!--            app:layout_constraintRight_toRightOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent" />-->

    <!--        <androidx.appcompat.widget.AppCompatEditText-->
    <!--            android:id="@+id/user_name"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="16dp"-->
    <!--            android:layout_marginEnd="16dp"-->
    <!--            android:drawableStart="@drawable/ic_baseline_person_24"-->
    <!--            android:drawablePadding="10dp"-->
    <!--            android:hint="@string/username"-->
    <!--            android:inputType="textPersonName"-->
    <!--            app:layout_constraintBottom_toTopOf="@id/password"-->
    <!--            app:layout_constraintLeft_toLeftOf="parent"-->
    <!--            app:layout_constraintRight_toRightOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/txtV" />-->

    <!--        <androidx.appcompat.widget.AppCompatEditText-->
    <!--            android:id="@+id/password"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="16dp"-->
    <!--            android:layout_marginEnd="16dp"-->
    <!--            android:drawableStart="@drawable/ic_baseline_password_24"-->
    <!--            android:drawablePadding="10dp"-->
    <!--            android:hint="@string/password"-->
    <!--            android:inputType="numberPassword"-->
    <!--            app:layout_constraintBottom_toTopOf="@id/buttons"-->
    <!--            app:layout_constraintLeft_toLeftOf="parent"-->
    <!--            app:layout_constraintRight_toRightOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/user_name" />-->

    <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--            android:id="@+id/buttons"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="bottom"-->
    <!--            android:orientation="horizontal"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent">-->

    <!--            <com.google.android.material.button.MaterialButton-->
    <!--                android:id="@+id/log_in"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginBottom="50dp"-->
    <!--                android:background="@android:color/transparent"-->
    <!--                android:text="@string/log_in"-->
    <!--                android:textAllCaps="false"-->
    <!--                android:textColor="@color/red"-->
    <!--                app:layout_constraintBottom_toBottomOf="parent"-->
    <!--                app:layout_constraintLeft_toLeftOf="parent"-->
    <!--                app:layout_constraintRight_toLeftOf="@id/cancel3"-->
    <!--                app:layout_constraintTop_toTopOf="parent" />-->

    <!--            <com.google.android.material.button.MaterialButton-->
    <!--                android:id="@+id/cancel3"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginBottom="50dp"-->
    <!--                android:background="@android:color/transparent"-->
    <!--                android:text="@string/cancel"-->
    <!--                android:textAllCaps="false"-->
    <!--                android:textColor="@color/red"-->
    <!--                app:layout_constraintBottom_toBottomOf="parent"-->
    <!--                app:layout_constraintLeft_toRightOf="@id/log_in"-->
    <!--                app:layout_constraintRight_toRightOf="parent"-->
    <!--                app:layout_constraintTop_toTopOf="parent" />-->


    <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <!--    <com.mikhaellopez.circularimageview.CircularImageView-->
    <!--        android:layout_width="100dp"-->
    <!--        android:layout_height="100dp"-->
    <!--        android:src="@mipmap/ic_launcher_round"-->
    <!--        app:civ_border_width="0dp"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/liner"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@id/liner" />-->


</LinearLayout>